[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/GUI/TeleporterCooldown.gd" type="Script" id=1]
[ext_resource path="res://fonts/Exo2-Black.otf" type="DynamicFontData" id=2]
[ext_resource path="res://textures/UI/bars/radial_progress2.png" type="Texture" id=3]
[ext_resource path="res://textures/UI/bars/radial_progress3.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 26
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="TeleporterCooldown" type="MarginContainer" groups=[
"gui",
]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1600.0
margin_bottom = 900.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 1600.0
margin_bottom = 900.0
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 640.0
margin_top = 364.0
margin_right = 960.0
margin_bottom = 536.0

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/CenterContainer/VBoxContainer2"]
margin_right = 320.0
margin_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 320, 40 )
custom_fonts/normal_font = SubResource( 1 )
text = "Change Area Cooldown"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/CenterContainer/VBoxContainer2"]
margin_top = 44.0
margin_right = 320.0
margin_bottom = 172.0

[node name="TextureProgress" type="TextureProgress" parent="VBoxContainer/CenterContainer/VBoxContainer2/CenterContainer"]
margin_left = 96.0
margin_right = 224.0
margin_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
fill_mode = 5

[node name="VisibleTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="IntervalTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
[connection signal="timeout" from="VisibleTimer" to="." method="_on_VisibleTimer_timeout"]
[connection signal="timeout" from="IntervalTimer" to="." method="_on_IntervalTimer_timeout"]
